<resources>
    <string name="app_name">WiFiHG</string>
    <string name="action_settings">Settings</string>


    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <!--<string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>-->
    <string name="empty_message">디바이스를 찾을 수 없습니다. P2P를 켜고 액션바에서 찾기 기능을 수행하십시오</string>
    <!--<string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>-->
    <string name="p2p_off_warning">액션바 버튼을 누르거나 시스템 세팅 창에서 P2P기능을 켜야합니다</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
